# Environment-Manager

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/libs/classes/: Emulator.h  Logger.cpp  Logger.h  ProcessManager.cpp  ProcessManager.h  ResourceManager.cpp  ResourceManager.h
src/libs/headers/: ProcessManager.h
